--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "news_reactdom",
   "version": "1.0.0",
   "description": "This is a News App coding in React Js,just for my reactdom learnning",
-  "main": "index.js",
+  "main": "root.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,8 +17,16 @@
   },
   "homepage": "https://github.com/yxnne/News_reactdom#readme",
   "dependencies": {
+    "antd": "^3.0.2",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
