--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.28.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-responsive": "^4.0.3",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
